# c-mandelbrot-arbitrary-precision

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  compile  dev_run  dev_setup  generate-samples.sh  install  install_dependencies  main.c  main_test.c  mandelbrot  mandelbrot-orbit  mandelbrot-orbit.py  mandelbrot-test
doc/: fractint_book.md  links.md  main-cardioid-detection.md  mandelbrot_set.md  optimisation.md  performace.md  period2-detection.md  periodicity-checking.md
samples/: mandelbrot-256x256.ppm  mandelbrot-256x256.txt  mandelbrot-colored-periods-256x256.ppm  mandelbrot-full-iterations-256x256.txt  mandelbrot-iter-256x256.txt  mandelbrot-periods-256x256.ppm  mandelbrot-periods-256x256.txt  mandelbrot-white-on-black-256x256.ppm
src/: ascii_graph.c  ascii_graph.h  complex.c  complex.h  fractal.c  fractal.h  image.c  image.h  main.c  main_test.c  mandelbrot_orbit.c  set.c  set.h
src/cycle-detection/: brent.c
src/mandelbrot/: ascii_graph.c  ascii_graph.h  color.c  color.h  complex.h  formula.c  fractal.c  fractal.h  image.c  image.h  set.c  set.h  zpoint.h  ztile.c
src/mandelbrot/application/: config.c  config.h
src/mandelbrot/domain/: calculated_point.c  calculated_point.h  color.c  color.h  complex.c  complex.h  formula.h  fractal.c  fractal.h  fractal_data.c  fractal_data.h  image.c  image.h  point.c  point.h  set.c  set.h  zpoint.c  zpoint.h  ztile.c  ztile.h
src/mandelbrot/domain/ascii_graph/: ascii_graph.c  ascii_graph.h  ascii_map.c  ascii_map.h
src/mandelbrot/domain/image/: color.c  color.h  color_map.c  color_map.h  image.c  image.h  pixel.c  pixel.h
src/mandelbrot/domain/optimisation/: main_cardioid.c  main_cardioid.h  main_cardioid_detection.c  main_cardioid_detection.h  period2_detection.c  period2_detection.h  periodicity_checking.c  periodicity_checking.h
src/mandelbrot/infrastructure/: ascii_graph_file.c  ascii_graph_file.h  console.c  console.h  ppm_image_file.c  ppm_image_file.h
src/mandelbrot/infrastructure/user_interface/console/: app.c  app.h  console_printer.c  console_printer.h
src/mandelbrot/infrastructure/user_interface/console/commands/: console_messages.c  console_messages.h  render_all_samples_command.c  render_all_samples_command.h  render_ascii_graph_command.c  render_ascii_graph_command.h  render_ppm_image_command.c  render_ppm_image_command.h
src/mandelbrot/infrastructure/user_interface/files/: ascii_graph_file.c  ascii_graph_file.h  ppm_image_file.c  ppm_image_file.h
src/mandelbrot/presentation/: ascii_graph.c  ascii_graph.h  output.c  output.h
tests/: ascii_graph_should.c  formula_should.c  fractal_should.c  helpers.h  image_should.c  main_test.c  set_should.c
tests/cycle-detection/: brent_algorithm_should.c
tests/fixtures/: mandelbrot-256x256.txt  mandelbrot-at-sign-256x256.txt  mandelbrot-full-iterations-256x256.txt  mandelbrot-iter-256x256.txt  mandelbrot-periods-256x256.txt
tests/lib/: helpers.c  unity_extension.h
tests/lib/unity/: unity_fixture.c  unity_fixture.h
tests/mandelbrot/: ascii_graph_should.c  formula_should.c  fractal_should.c  image_should.c  mandelbrot_set_should.c  set_should.c
tests/mandelbrot/application/: app_config_should.c
tests/mandelbrot/domain/: formula_should.c  fractal_data_builder.c  fractal_data_builder.h  fractal_should.c  image_should.c  mandelbrot_set_should.c
tests/mandelbrot/infrastructure/: ascii_graph_should.c
tests/mandelbrot/infrastructure/user_interface/files/: ascii_graph_file_should.c
